# VSearch-API

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
config/prompts/: vacancy_processing_prompt.txt
core/: models.py  schemas.py  tasks.py  urls.py  utils.py
core/api/: vacancies.py
core/migrations/: 0001_initial.py  0002_vacancy_source.py  0003_jobcategory_remove_resume_keywords_and_more.py
core/services/: __init__.py  duplicate_detector.py
