[tool.poetry]
name = "vacancysearch"
version = "0.1.0"
description = ""
authors = ["Mitrandir <carkin227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
celery = "^5.4.0"
redis = "^5.2.1"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
pydantic = "^2.10.6"
openai = "^1.65.2"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
